// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render modal when with bike commute 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={200}
  contentLabel="The Weather and Your Commute"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h4>
    You're all clear; bike it.
  </h4>
  <div>
    <ReactAnimatedWeather
      animate={true}
      color="black"
      icon="CLEAR_DAY"
      size={64}
    />
    <span>
      clear skies
       at
      45
       with a
      0
      % chance of precipitation
    </span>
  </div>
  <button
    onClick={[Function]}
  >
    Ok
  </button>
</Modal>
`;

exports[`should render modal when with metro commute 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={200}
  contentLabel="The Weather and Your Commute"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h4>
    You should take the metro.
  </h4>
  <div>
    <ReactAnimatedWeather
      animate={true}
      color="black"
      icon="CLEAR_DAY"
      size={64}
    />
    <span>
      clear skies
       at
      45
       with a
      0
      % chance of precipitation
    </span>
  </div>
  <button
    onClick={[Function]}
  >
    Ok
  </button>
</Modal>
`;
